# vandale2008reader

./: CMakeLists.txt  Makefile  Makefile.linux  README.md  vdwreader.cpp
cmake_find/: Finditslib.cmake  Findzlib.cmake
cmake_libs/: zlib.cmake
